:bug: fix dropdown overflow

--- a/src/scss/pages/article.scss
+++ b/src/scss/pages/article.scss
@@ -1,6 +1,6 @@
 .rent-container {
   .rent-content {
-    margin: 40px 100px;
+    margin: 40px 100px 100px 100px;
 
     .rent-infos--container {
       margin-top: 30px;
